# tiny-rocm-nn

./: .gitignore  .gitmodules  CMakeLists.txt  DOCUMENTATION.md  README.md  test_transpose_semantics.cu
benchmarks/: bench_pytorch_rocm.py
benchmarks/image/: CMakeLists.txt  DependInfo.cmake  Makefile  bench_ours.cpp  cmake_clean.cmake  cmake_install.cmake  flags.make  link.txt
bindings/torch/: setup.py
bindings/torch/include/cuda_compat/: cublasLt.h  cublas_v2.h  cuda_bf16.h  cuda_runtime_api.h  cusparse.h
bindings/torch/include/cuda_compat/c10/cuda/impl/: cuda_cmake_macros.h
bindings/torch/tinycudann/: bindings.cpp
claude/: claude_v013.patch  claude_v014.patch  claude_v015.patch  loss_analysis.md
data/: config_w64.json
include/tiny-cuda-nn/: common.h  common_device.h  common_host.h  cpp_api.h  cublas_matmul.h  cuda_graph.h  cutlass_matmul.h  debug_config.h  encoding.h  gpu_matrix.h  gpu_memory.h  gpu_memory_json.h  loss.h  multi_stream.h  network.h  network_with_input_encoding.h  object.h  optimizer.h  random.h  reduce_sum.h  trainer.h  vec.h
include/tiny-cuda-nn/encodings/: composite.h  empty.h  frequency.h  grid.h  grid_interface.h  identity.h  oneblob.h  spherical_harmonics.h  triangle_wave.h
include/tiny-cuda-nn/losses/: constant.h  cross_entropy.h  l1.h  l2.h  mape.h  relative_l1.h  relative_l2.h  relative_l2_luminance.h  smape.h  variance_is.h
include/tiny-cuda-nn/networks/: cutlass_mlp.h  fully_fused_mlp.h
include/tiny-cuda-nn/optimizers/: adam.h  average.h  batched.h  composite.h  ema.h  exponential_decay.h  lookahead.h  novograd.h  sgd.h  shampoo.h
samples/: CMakeDirectoryInformation.cmake  CMakeLists.txt  DependInfo.cmake  Makefile  cmake_clean.cmake  cmake_install.cmake  link.txt  mlp_learning_an_image.cpp  mlp_learning_an_image.cu
src/: CMakeLists.txt  common_host.cpp  cpp_api.cpp  cutlass_mlp.cpp  fully_fused_mlp.cpp  fully_fused_mlp.cu  network.cpp  network.cu  object.cpp  reduce_sum.cpp
test/: CMakeLists.txt  build_test_gemm_mixed_rm_v39.sh  build_test_hipblas.sh  build_test_mixed_layout.sh  build_test_rocwmma.sh  build_test_rocwmma_bf16.sh  build_test_rocwmma_fp32.sh  fused_unfused_gemm_only_test.cpp  fused_unfused_layers_test.cpp  fused_unfused_test.cpp  gemm_dump_repro.cpp  test_gemm_mixed_rm_v39.cpp  test_half2_atomic.cpp  test_half2_atomic.sh  test_hipblas_mixed_precision_beta.cpp  test_hipblas_transpose.cpp  test_mixed_layout_exact.cpp  test_rocwmma_basic.cpp  test_rocwmma_bf16.cpp  test_rocwmma_fp32_input.cpp  test_tex2d_rocm.cpp
